--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "format": "prettier --write .",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "prepare": "husky"
   },
   "dependencies": {
     "@convex-dev/eslint-plugin": "^1.1.1",
@@ -74,6 +75,7 @@
     "@vitest/coverage-v8": "^3.2.3",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.10",
+    "husky": "^9.1.7",
     "next-sitemap": "^4.2.3",
     "npm-run-all2": "^8.0.4",
     "prettier": "^3.8.0",
