--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
   "dependencies": {
     "@convex-dev/eslint-plugin": "^1.1.1",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
@@ -55,6 +57,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "next": "^16.0.10",
+    "next-plausible": "^3.12.5",
     "next-themes": "^0.4.6",
     "pino": "^10.2.0",
     "pino-pretty": "^13.1.3",
